# modern-cpp-template

./: .gitignore  CMakeLists.txt  README.md
Source/: CMakeLists.txt
Source/Application/: Application.cpp  Application.hpp  Main.cpp
